--- a/src/client/app/components/parts/purchase-film-order/purchase-film-order.component.html
+++ b/src/client/app/components/parts/purchase-film-order/purchase-film-order.component.html
@@ -8,7 +8,7 @@
         </dt>
         <dd>
             <ul>
-                <app-purchase-film-order-performance *ngFor="let film of data.films" [data]="film"></app-purchase-film-order-performance>
+                <app-purchase-film-order-performance *ngFor="let film of data.films" [data]="film" [member]="member"></app-purchase-film-order-performance>
             </ul>
         </dd>
     </dl>
