--- a/src/client/app/components/parts/seat-info/seat-info.component.html
+++ b/src/client/app/components/parts/seat-info/seat-info.component.html
@@ -1,4 +1,4 @@
-<div class="seat-info" [class.screen-4dx]="type === '002'">
+<div class="seat-info" [class.screen-4dx]="type === '002' || type === '004'">
     <div class="box radius bg-white">
         <div class="seat">
             <strong>空席</strong>
