--- a/src/client/app/components/pages/purchase/purchase-seat/purchase-seat.component.scss
+++ b/src/client/app/components/pages/purchase/purchase-seat/purchase-seat.component.scss
@@ -115,9 +115,6 @@ $mobile: 767px;
             }
             .text {
                 padding: 0 10px;
-                p {
-                    font-weight: bold;
-                }
             }
         }
         .seat-grand-class {
@@ -144,7 +141,7 @@ $mobile: 767px;
                 height: (91px / 2);
             }
         }
-        .seat-pair {
+        .seat-parent-and-child-pair {
             img {
                 width: (90px / 2);
                 height: (56px / 2);
