--- a/src/client/app/modules/inquiry/pages/inquiry-login/inquiry-login.component.html
+++ b/src/client/app/modules/inquiry/pages/inquiry-login/inquiry-login.component.html
@@ -1,3 +1,69 @@
-<p>
-  inquiry-login works!
-</p>
+<div class="contents">
+    <h1 class="page-ttl">チケット情報照会</h1>
+    <p class="read">下記にチケット購入時の予約番号と電話番号を入力して<br>「照会」ボタンを押してください。</p>
+    <form [formGroup]="inquiryForm" (ngSubmit)="onSubmit()">
+        <div class="box radius bg-light-gray">
+            <dl>
+                <dt>予約番号</dt>
+                <dd>
+                    <input type="text" pattern="\d*" formControlName="confirmationNumber" id="confirmationNumber"
+                        maxlength="8" autocomplete="off" placeholder="(例)12345678" [class.validation]="inquiryForm.controls.confirmationNumber.invalid && inquiryForm.controls.confirmationNumber.touched">
+                    <div
+                        *ngIf="inquiryForm.controls.confirmationNumber.invalid && inquiryForm.controls.confirmationNumber.touched">
+                        <p *ngIf="inquiryForm.controls.confirmationNumber.errors.required" class="validation-text">
+                            予約番号が未入力です</p>
+                        <p *ngIf="inquiryForm.controls.confirmationNumber.errors.pattern" class="validation-text">
+                            予約番号は数字で入力してください</p>
+                    </div>
+                </dd>
+                <dt>電話番号</dt>
+                <dd>
+                    <input type="text" pattern="\d*" formControlName="telephone" id="telephone" autocomplete="off"
+                        placeholder="(例)08000000000" [class.validation]="inquiryForm.controls.telephone.invalid && inquiryForm.controls.telephone.touched">
+                    <div *ngIf="inquiryForm.controls.telephone.invalid && inquiryForm.controls.telephone.touched"
+                        class="mt-2">
+                        <p *ngIf="inquiryForm.controls.telephone.errors.required" class="validation-text">
+                            電話番号が未入力です</p>
+                        <p *ngIf="inquiryForm.controls.telephone.errors.minlength" class="validation-text">
+                            電話番号は9文字以上で入力してください
+                        </p>
+                        <p *ngIf="inquiryForm.controls.telephone.errors.maxlength" class="validation-text">
+                            電話番号は15文字以内で入力してください
+                        </p>
+                        <!-- <p *ngIf="inquiryForm.controls.telephone.errors.pattern" class="validation-text">
+              電話番号は数字で入力してください</p> -->
+                        <p *ngIf="inquiryForm.controls.telephone.errors.telephone" class="validation-text">
+                            電話番号が正しくありません</p>
+                    </div>
+                </dd>
+            </dl>
+        </div>
+
+        <div class="button-area">
+            <div class="button next-button blue-button">
+                <button type="submit" [disabled]="isLoading">
+                    <app-icon iconName="next-white" width="15" height="15"></app-icon>照会
+                </button>
+            </div>
+            <div class="prev-link">
+                <a [href]="seller?.url">
+                    <app-icon iconName="prev-black" width="15" height="15"></app-icon>劇場TOPへ戻る
+                </a>
+            </div>
+        </div>
+    </form>
+
+
+    <app-site-seal></app-site-seal>
+</div>
+
+<app-modal [open]="inquiryErrorModal" [layout]="true" (close)="inquiryErrorModal = false">
+    <div class="modal-title large-text text-center mb-middle">
+        <strong>エラーが発生しました</strong>
+    </div>
+    <p class="text-center">
+        予約番号、電話番号をご確認ください。
+    </p>
+</app-modal>
+
+<app-loading [show]="isLoading"></app-loading>
