--- a/src/client/app/modules/purchase/components/pages/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-confirm/purchase-confirm.component.html
@@ -116,7 +116,7 @@
                 <div *ngIf="confirmForm.controls['notes'].invalid && (confirmForm.controls['notes'].dirty || confirmForm.controls['notes'].touched)"
                     class="validation-text">利用規約に同意してください</div>
             </div>
-            <app-buttons nextLabel="購入完了" prevLabel="戻る" prevLink="/purchase/input"></app-buttons>
+            <app-buttons [disabled]="isLoading" nextLabel="購入完了" prevLabel="戻る" prevLink="/purchase/input"></app-buttons>
         </form>
     </div>
     <app-site-seal></app-site-seal>
