--- a/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
@@ -283,7 +283,7 @@
             </div>
         </div>
 
-        <app-buttons nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/ticket"></app-buttons>
+        <app-buttons [disabled]="isLoading" nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/ticket"></app-buttons>
     </form>
     <app-site-seal></app-site-seal>
 </div>
