--- a/src/client/app/modules/purchase/components/pages/purchase-overlap/purchase-overlap.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-overlap/purchase-overlap.component.html
@@ -30,7 +30,7 @@
         </ul>
         <p class="text-center mb-x-small">上記の仮予約内容で購入手続きへ戻ります。</p>
         <form (ngSubmit)="returnTransaction()">
-            <app-next-button>仮予約の購入手続きへ戻る</app-next-button>
+            <app-next-button [disabled]="isLoading">仮予約の購入手続きへ戻る</app-next-button>
         </form>
     </div>
 
@@ -60,7 +60,7 @@
         </ul>
         <p class="text-center  mb-x-small">仮予約を削除し、新しく選択した上映スケジュールの購入手続きを進めます。</p>
         <form (ngSubmit)="newTransaction()">
-            <app-next-button>仮予約を削除して次へ進む</app-next-button>
+            <app-next-button [disabled]="isLoading">仮予約を削除して次へ進む</app-next-button>
         </form>
     </div>
     <app-site-seal></app-site-seal>
