--- a/src/client/app/modules/shared/components/parts/buttons/buttons.component.html
+++ b/src/client/app/modules/shared/components/parts/buttons/buttons.component.html
@@ -1,5 +1,5 @@
 <div class="button-area">
-    <app-next-button>{{ nextLabel }}</app-next-button>
+    <app-next-button [disabled]="disabled">{{ nextLabel }}</app-next-button>
     <div class="prev-link">
         <a routerLink="{{ prevLink }}"><app-icon iconName="prev-black" width="15" height="15"></app-icon>{{ prevLabel }}</a>
     </div>
