### Added  - クレジットカードエラー文言追加

--- a/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
@@ -321,4 +321,5 @@
     <div class="modal-title large-text text-center mb-middle">
         <strong>エラーが発生しました</strong>
     </div>
+    <p class="text-center">クレジットカード情報を確認してください。</p>
 </app-modal>
