--- a/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
@@ -12,16 +12,16 @@
                     <dt>セイ</dt>
                     <dd>
                         <input
-                            [class.validation]="inputForm.controls['familyName'].invalid && inputForm.controls['familyName'].touched"
+                            [class.validation]="inputForm.controls.familyName.invalid && inputForm.controls.familyName.touched"
                             type="text" formControlName="familyName" autocomplete="family-name" placeholder="(例)シネマ">
                         <div
-                            *ngIf="inputForm.controls['familyName'].invalid && inputForm.controls['familyName'].touched">
-                            <div *ngIf="inputForm.controls['familyName'].errors.required" class="validation-text">
+                            *ngIf="inputForm.controls.familyName.invalid && inputForm.controls.familyName.touched">
+                            <div *ngIf="inputForm.controls.familyName.errors?.required" class="validation-text">
                                 セイが未入力です</div>
-                            <div *ngIf="inputForm.controls['familyName'].errors.maxlength" class="validation-text">
-                                セイは{{ inputForm.controls['familyName'].errors.maxlength.requiredLength }}文字以下で入力してください
+                            <div *ngIf="inputForm.controls.familyName.errors?.maxlength" class="validation-text">
+                                セイは{{ inputForm.controls.familyName.errors?.maxlength.requiredLength }}文字以下で入力してください
                             </div>
-                            <div *ngIf="inputForm.controls['familyName'].errors.pattern" class="validation-text">
+                            <div *ngIf="inputForm.controls.familyName.errors?.pattern" class="validation-text">
                                 セイは全角カタカナで入力してください</div>
                         </div>
                     </dd>
@@ -30,15 +30,15 @@
                     <dt>メイ</dt>
                     <dd>
                         <input
-                            [class.validation]="inputForm.controls['givenName'].invalid && inputForm.controls['givenName'].touched"
+                            [class.validation]="inputForm.controls.givenName.invalid && inputForm.controls.givenName.touched"
                             type="text" formControlName="givenName" autocomplete="given-name" placeholder="(例)タロウ">
-                        <div *ngIf="inputForm.controls['givenName'].invalid && inputForm.controls['givenName'].touched">
-                            <div *ngIf="inputForm.controls['givenName'].errors.required" class="validation-text">
+                        <div *ngIf="inputForm.controls.givenName.invalid && inputForm.controls.givenName.touched">
+                            <div *ngIf="inputForm.controls.givenName.errors?.required" class="validation-text">
                                 メイが未入力です</div>
-                            <div *ngIf="inputForm.controls['givenName'].errors.maxlength" class="validation-text">
-                                メイは{{ inputForm.controls['givenName'].errors.maxlength.requiredLength }}文字以下で入力してください
+                            <div *ngIf="inputForm.controls.givenName.errors?.maxlength" class="validation-text">
+                                メイは{{ inputForm.controls.givenName.errors?.maxlength.requiredLength }}文字以下で入力してください
                             </div>
-                            <div *ngIf="inputForm.controls['givenName'].errors.pattern" class="validation-text">
+                            <div *ngIf="inputForm.controls.givenName.errors?.pattern" class="validation-text">
                                 メイは全角カタカナで入力してください</div>
                         </div>
                     </dd>
@@ -52,15 +52,15 @@
             <dl>
                 <dd>
                     <input
-                        [class.validation]="inputForm.controls['email'].invalid && inputForm.controls['email'].touched"
+                        [class.validation]="inputForm.controls.email.invalid && inputForm.controls.email.touched"
                         type="email" formControlName="email" autocomplete="email"
                         placeholder="(例)cinema@cinemasunshine.co.jp">
-                    <div *ngIf="inputForm.controls['email'].invalid && inputForm.controls['email'].touched">
-                        <div *ngIf="inputForm.controls['email'].errors.required" class="validation-text">メールアドレスが未入力です
+                    <div *ngIf="inputForm.controls.email.invalid && inputForm.controls.email.touched">
+                        <div *ngIf="inputForm.controls.email.errors?.required" class="validation-text">メールアドレスが未入力です
                         </div>
-                        <div *ngIf="inputForm.controls['email'].errors.maxlength" class="validation-text">
-                            メールアドレスは{{ inputForm.controls['email'].errors.maxlength.requiredLength }}文字以下で入力してください</div>
-                        <div *ngIf="inputForm.controls['email'].errors.email" class="validation-text">メールアドレスが正しくありません
+                        <div *ngIf="inputForm.controls.email.errors?.maxlength" class="validation-text">
+                            メールアドレスは{{ inputForm.controls.email.errors?.maxlength.requiredLength }}文字以下で入力してください</div>
+                        <div *ngIf="inputForm.controls.email.errors?.email" class="validation-text">メールアドレスが正しくありません
                         </div>
                     </div>
                 </dd>
@@ -69,19 +69,19 @@
                 <dt>メールアドレス確認</dt>
                 <dd>
                     <input
-                        [class.validation]="(inputForm.controls['emailConfirm'].invalid && inputForm.controls['emailConfirm'].touched) || (inputForm.controls['email'].touched && inputForm.controls['emailConfirm'].touched && (inputForm.controls['email'].value !== inputForm.controls['emailConfirm'].value))"
+                        [class.validation]="(inputForm.controls.emailConfirm.invalid && inputForm.controls.emailConfirm.touched) || (inputForm.controls.email.touched && inputForm.controls.emailConfirm.touched && (inputForm.controls.email.value !== inputForm.controls.emailConfirm.value))"
                         type="email" formControlName="emailConfirm" placeholder="(例)cinema@cinemasunshine.co.jp">
                     <div
-                        *ngIf="inputForm.controls['emailConfirm'].invalid && inputForm.controls['emailConfirm'].touched">
-                        <div *ngIf="inputForm.controls['emailConfirm'].errors.required" class="validation-text">
+                        *ngIf="inputForm.controls.emailConfirm.invalid && inputForm.controls.emailConfirm.touched">
+                        <div *ngIf="inputForm.controls.emailConfirm.errors?.required" class="validation-text">
                             メールアドレス確認が未入力です</div>
-                        <div *ngIf="inputForm.controls['emailConfirm'].errors.maxlength" class="validation-text">
-                            メールアドレス確認は{{ inputForm.controls['emailConfirm'].errors.maxlength.requiredLength }}文字以下で入力してください
+                        <div *ngIf="inputForm.controls.emailConfirm.errors?.maxlength" class="validation-text">
+                            メールアドレス確認は{{ inputForm.controls.emailConfirm.errors?.maxlength.requiredLength }}文字以下で入力してください
                         </div>
-                        <div *ngIf="inputForm.controls['emailConfirm'].errors.email" class="validation-text">
+                        <div *ngIf="inputForm.controls.emailConfirm.errors?.email" class="validation-text">
                             メールアドレス確認が正しくありません</div>
                     </div>
-                    <div *ngIf="inputForm.controls['email'].touched && inputForm.controls['emailConfirm'].touched && (inputForm.controls['email'].value !== inputForm.controls['emailConfirm'].value)"
+                    <div *ngIf="inputForm.controls.email.touched && inputForm.controls.emailConfirm.touched && (inputForm.controls.email.value !== inputForm.controls.emailConfirm.value)"
                         class="validation-text">
                         メールアドレス確認が一致しません</div>
                     <p class="small-x-text">
@@ -99,20 +99,20 @@
             <dl>
                 <dd>
                     <input
-                        [class.validation]="inputForm.controls['telephone'].invalid && inputForm.controls['telephone'].touched"
+                        [class.validation]="inputForm.controls.telephone.invalid && inputForm.controls.telephone.touched"
                         type="tel" formControlName="telephone" autocomplete="tel" placeholder="(例)08000000000">
-                    <div *ngIf="inputForm.controls['telephone'].invalid && inputForm.controls['telephone'].touched">
-                        <div *ngIf="inputForm.controls['telephone'].errors.required" class="validation-text">電話番号が未入力です
+                    <div *ngIf="inputForm.controls.telephone.invalid && inputForm.controls.telephone.touched">
+                        <div *ngIf="inputForm.controls.telephone.errors?.required" class="validation-text">電話番号が未入力です
                         </div>
-                        <div *ngIf="inputForm.controls['telephone'].errors.minlength" class="validation-text">
-                            電話番号は{{ inputForm.controls['telephone'].errors.minlength.requiredLength }}文字以上で入力してください
+                        <div *ngIf="inputForm.controls.telephone.errors?.minlength" class="validation-text">
+                            電話番号は{{ inputForm.controls.telephone.errors?.minlength.requiredLength }}文字以上で入力してください
                         </div>
-                        <div *ngIf="inputForm.controls['telephone'].errors.maxlength" class="validation-text">
-                            電話番号は{{ inputForm.controls['telephone'].errors.maxlength.requiredLength }}文字以下で入力してください
+                        <div *ngIf="inputForm.controls.telephone.errors?.maxlength" class="validation-text">
+                            電話番号は{{ inputForm.controls.telephone.errors?.maxlength.requiredLength }}文字以下で入力してください
                         </div>
-                        <div *ngIf="inputForm.controls['telephone'].errors.pattern" class="validation-text">
+                        <div *ngIf="inputForm.controls.telephone.errors?.pattern" class="validation-text">
                             電話番号は数字で入力してください</div>
-                        <div *ngIf="inputForm.controls['telephone'].errors.telephone" class="validation-text">
+                        <div *ngIf="inputForm.controls.telephone.errors?.telephone" class="validation-text">
                             電話番号が正しくありません</div>
                     </div>
                     <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
@@ -145,14 +145,14 @@
                             <dt>カード番号</dt>
                             <dd>
                                 <input
-                                    [class.validation]="inputForm.controls['cardNumber'].invalid && inputForm.controls['cardNumber'].touched"
+                                    [class.validation]="inputForm.controls.cardNumber.invalid && inputForm.controls.cardNumber.touched"
                                     type="text" pattern="\d*" formControlName="cardNumber" id="cardNumber"
                                     autocomplete="off" placeholder="(例)1234567890" maxlength="16">
                                 <div
-                                    *ngIf="inputForm.controls['cardNumber'].invalid && inputForm.controls['cardNumber'].touched">
-                                    <div *ngIf="inputForm.controls['cardNumber'].errors.required"
+                                    *ngIf="inputForm.controls.cardNumber.invalid && inputForm.controls.cardNumber.touched">
+                                    <div *ngIf="inputForm.controls.cardNumber.errors?.required"
                                         class="validation-text">カード番号が未入力です</div>
-                                    <div *ngIf="inputForm.controls['cardNumber'].errors.pattern"
+                                    <div *ngIf="inputForm.controls.cardNumber.errors?.pattern"
                                         class="validation-text">カード番号は数字で入力してください</div>
                                 </div>
                                 <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
@@ -184,12 +184,12 @@
                             <dt>セキュリティーコード</dt>
                             <dd>
                                 <input
-                                    [class.validation]="inputForm.controls['securityCode'].invalid && inputForm.controls['securityCode'].touched"
+                                    [class.validation]="inputForm.controls.securityCode.invalid && inputForm.controls.securityCode.touched"
                                     type="text" pattern="\d*" formControlName="securityCode" autocomplete="off"
                                     placeholder="(例)123" maxlength="4">
                                 <div
-                                    *ngIf="inputForm.controls['securityCode'].invalid && inputForm.controls['securityCode'].touched">
-                                    <div *ngIf="inputForm.controls['securityCode'].errors.required"
+                                    *ngIf="inputForm.controls.securityCode.invalid && inputForm.controls.securityCode.touched">
+                                    <div *ngIf="inputForm.controls.securityCode.errors?.required"
                                         class="validation-text">セキュリティーコードが未入力です</div>
                                 </div>
                                 <p>
@@ -203,12 +203,12 @@
                             <dt>カード名義人</dt>
                             <dd>
                                 <input
-                                    [class.validation]="inputForm.controls['holderName'].invalid && inputForm.controls['holderName'].touched"
+                                    [class.validation]="inputForm.controls.holderName.invalid && inputForm.controls.holderName.touched"
                                     type="text" formControlName="holderName" autocomplete="off"
                                     placeholder="(例)TARO CINEMA">
                                 <div
-                                    *ngIf="inputForm.controls['holderName'].invalid && inputForm.controls['holderName'].touched">
-                                    <div *ngIf="inputForm.controls['holderName'].errors.required"
+                                    *ngIf="inputForm.controls.holderName.invalid && inputForm.controls.holderName.touched">
+                                    <div *ngIf="inputForm.controls.holderName.errors?.required"
                                         class="validation-text">カード名義人が未入力です</div>
                                 </div>
                             </dd>
