--- a/src/client/app/modules/purchase/components/pages/purchase-ticket/purchase-ticket.component.scss
+++ b/src/client/app/modules/purchase/components/pages/purchase-ticket/purchase-ticket.component.scss
@@ -43,6 +43,38 @@ $mobile: 767px;
     }
 }
 
+.mg {
+    dt {
+        @media screen and (max-width: $mobile){
+            display: block;
+        }
+    }
+    dd {
+        @media screen and (max-width: $mobile){
+            display: block;
+            width: 100%;
+        }
+    }
+    .mg-button {
+        label, a {
+            border: 1px solid rgb(75, 24, 216);
+            background-color: #FFF;
+            color: #333;
+            &:before {
+                left: 15px;
+            }
+            &:after {
+                left: 15px;
+            }
+        }
+        img {
+            width: 100px;
+            height: 22px;
+            vertical-align: bottom;
+        }
+    }
+}
+
 .point {
     dt {
         @media screen and (max-width: $mobile){
