### Added  -  ブロック席対応

--- a/src/client/app/modules/purchase/components/parts/seat-info/seat-info.component.html
+++ b/src/client/app/modules/purchase/components/parts/seat-info/seat-info.component.html
@@ -9,5 +9,8 @@
         <div class="seat disabled">
             <strong>選択不可</strong>
         </div>
+        <div class="seat space">
+            <strong>選択不可</strong>
+        </div>
     </div>
 </div>
