--- a/src/client/app/modules/purchase/components/parts/seat-info/seat-info.component.html
+++ b/src/client/app/modules/purchase/components/parts/seat-info/seat-info.component.html
@@ -4,10 +4,10 @@
             <strong>空席</strong>
         </div>
         <div class="seat active">
-            <strong>選択済</strong>
+            <strong>選択中</strong>
         </div>
         <div class="seat disabled">
-            <strong>選択不可</strong>
+            <strong>販売済み</strong>
         </div>
         <div class="seat space">
             <strong>選択不可</strong>
