### Changed  - SDKアップデート  - confirmationNumber参照を予約番号に変更  - Cinerino SDKでサービスインスタンス生成時にプロジェクト指定へ変更

--- a/src/client/app/modules/inquiry/pages/inquiry-confirm/inquiry-confirm.component.html
+++ b/src/client/app/modules/inquiry/pages/inquiry-confirm/inquiry-confirm.component.html
@@ -16,7 +16,7 @@
     <div class="box radius bg-light-gray mb-large">
         <dl>
             <dt>予約番号</dt>
-            <dd><strong class="red-text large-x-text">{{ order.confirmationNumber }}</strong></dd>
+            <dd><strong class="red-text large-x-text">{{ getReservationNumber() }}</strong></dd>
             <dd class="small-x-text">※チケットの発行・照会等に必要な番号となりますので必ずお控えください。</dd>
         </dl>
     </div>
