--- a/src/client/app/modules/purchase/components/pages/purchase-complete/purchase-complete.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-complete/purchase-complete.component.html
@@ -10,7 +10,7 @@
             <dl>
                 <dt>予約番号</dt>
                 <dd>
-                    <strong class="red-text large-x-text">{{ data.order.confirmationNumber }}</strong>
+                    <strong class="red-text large-x-text">{{ getReservationNumber() }}</strong>
                     <p class="small-x-text">※チケットの発行等に必要な番号となりますので必ず忘れないようにしてください。</p>
                 </dd>
             </dl>
@@ -76,7 +76,7 @@
                 <br>また、購入完了メールは自動送信のため再送信は致しかねます。
                 <br>購入できているかのご確認は「予約番号」をお控えのうえ
                 <a class="inquiry-login-link"
-                    [href]="environment.FRONTEND_ENDPOINT + '/inquiry/login?theater=' + data.seller.location?.branchCode + '&reserve=' + data.order.confirmationNumber"
+                    [href]="environment.FRONTEND_ENDPOINT + '/inquiry/login?theater=' + data.seller.location?.branchCode + '&reserve=' + getReservationNumber()"
                     target="_blank">チケット照会ページ</a>よりご確認ください。
                 <br>・ご入力いただいたメールアドレスに不備があった場合やメールの着信を拒否されている場合は購入完了メールが受け取れない場合があります。
                 <br>・プロバイダのメール設定、携帯キャリア会社のメール設定のフィルタリング機能を有効にしている方は「削除フォルダ」または「迷惑メールフォルダ」をご確認ください。</p>
@@ -103,7 +103,7 @@
                             </div>
                             <div class="button blue-button inquiry-button mb-small center-button">
                                 <a class="icon-new-tab-white"
-                                    [href]="environment.FRONTEND_ENDPOINT + '/inquiry/login?theater=' + data.seller.location?.branchCode + '&reserve=' + data.order.confirmationNumber"
+                                    [href]="environment.FRONTEND_ENDPOINT + '/inquiry/login?theater=' + data.seller.location?.branchCode + '&reserve=' + getReservationNumber()"
                                     target="_blank">チケット情報確認</a>
                             </div>
                             <p>スマートフォンをお持ちでない方は当日チケット発券/入場も可能です。
