--- a/src/client/app/modules/purchase/components/parts/purchase-film-order-performance/purchase-film-order-performance.component.html
+++ b/src/client/app/modules/purchase/components/parts/purchase-film-order-performance/purchase-film-order-performance.component.html
@@ -13,7 +13,7 @@
             </div>
         </dt>
         <dd class="small-text text-center">
-            <div class="screen-name">{{ data.location.name.ja }}</div>
+            <div class="screen-name">{{ data.location.name?.ja }}</div>
         </dd>
     </dl>
 </li>
