### Added  - 残り取引時間表示追加

--- a/src/client/app/modules/purchase/components/pages/purchase-base/purchase-base.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-base/purchase-base.component.html
@@ -1,5 +1,7 @@
+
 <app-header>
     <app-purchase-step></app-purchase-step>
 </app-header>
+<app-transaction-remaining-time></app-transaction-remaining-time>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
