--- a/src/client/app/modules/purchase/components/parts/purchase-term/purchase-term.component.scss
+++ b/src/client/app/modules/purchase/components/parts/purchase-term/purchase-term.component.scss
@@ -5,6 +5,7 @@ $mobile: 767px;
 }
 .term {
     overflow-y: auto;
+    will-change: transform;
     -webkit-overflow-scrolling: touch;
     resize: vertical;
     height: 150px;
