--- a/src/client/app/modules/shared/components/parts/modal/modal.component.scss
+++ b/src/client/app/modules/shared/components/parts/modal/modal.component.scss
@@ -29,6 +29,7 @@ $mobile: 767px;
     .inner {
         max-height: 70vh;
         overflow-y: auto;
+        will-change: transform;
         .box {
             border-radius: 0;
         }
