--- a/src/client/app/modules/shared/components/parts/screen/screen.component.scss
+++ b/src/client/app/modules/shared/components/parts/screen/screen.component.scss
@@ -211,6 +211,7 @@ $mobile: 767px;
 .zoom {
     .screen-scroll {
         overflow: auto;
+        will-change: transform;
         transition: transform 0.2s;
         -webkit-overflow-scrolling: touch;
     }
