--- a/src/client/app/modules/error/pages/expired/expired.component.html
+++ b/src/client/app/modules/error/pages/expired/expired.component.html
@@ -1,5 +1,5 @@
 <div class="contents">
-    <h1 class="page-ttl">エラーが発生しました</h1>
+    <h1 class="page-ttl">タイムアウト</h1>
     <p class="read">お手続きの有効期限がきれました。
         <br>お手数をおかけいたしますが、もう一度最初から操作をお願いいたします。</p>
     <div class="button-area">
