--- a/src/client/app/modules/purchase/components/pages/purchase-seat/purchase-seat.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-seat/purchase-seat.component.html
@@ -23,7 +23,7 @@
                 <div class="seat-type-inner">
                     <div class="image"><img src="/images/theater/seat/grand-class.svg"></div>
                     <div class="text">
-                        <p class="font-weight-bold">グランドクラス<br>+￥3,000</p>
+                        <p class="font-weight-bold">グランドクラス<br>+￥3,000<br><span class="small-text red-text">（ミールクーポン1,200円分含む）</span></p>
                     </div>
                 </div>
             </li>
@@ -31,7 +31,7 @@
                 <div class="seat-type-inner">
                     <div class="image"><img src="/images/theater/seat/premium-class.svg"></div>
                     <div class="text">
-                        <p class="font-weight-bold">プレミアムクラス<br>+￥1,500</p>
+                        <p class="font-weight-bold">プレミアムクラス<br>+￥1,500<br><span class="small-text red-text">（ミールクーポン700円分含む）</span></p>
                     </div>
                 </div>
             </li>
@@ -62,6 +62,12 @@
             </li>
         </ul>
     </div>
+
+    <p *ngIf="getSeatType('grandClass') || getSeatType('premiumClass')" class="mb-middle">
+        ● ミールクーポンは5Fクラッパーズダイナー、12F バール パノーラマ、劇場売店でのみご利用いただけます。<br>
+        ● お支払い金額がクーポンの額面に満たない場合は、おつりが出ませんのご了承ください。<br>
+        ● ミールクーポンはご鑑賞日当日のみ有効となります。
+    </p>
 
     <div class="film-info radius mb-large">
         <p class="mb-small">現在、選択されているチケットは下記のとおりです。</p>
